# GEMM_CUDA

./: CMakeLists.txt  README.md  gen_benchmark_results.sh  plot_benchmark_results.py  sgemm.cu
docs/: gemm_cuda_guide_zh.md
docs/optimizations/: README.md  k01_naive.md  k02_global_memory_coalescing.md  k03_shared_memory_blocking.md  k04_1d_block_tiling.md  k05_2d_block_tiling.md  k06_vectorized_access.md  k07_bank_conflict_linearized.md  k08_bank_conflict_padding.md  k09_autotuning.md  k10_warp_tiling.md  k11_software_double_buffering.md  k12_cp_async.md  k13_hopper_tma.md  k14_hopper_tma_double_buffering.md  k15_hopper_tensor_core_tf32.md  k16_hopper_tma_tensor_core_tf32.md  ncu_workflow.md
scripts/: kernel_10_autotuner.sh  kernel_11_autotuner.sh  kernel_9_autotuner.sh
src/: kernels.cuh  runner.cu  runner.cuh
src/kernels/ampere/: ampere_k01_naive.cuh  ampere_k02_global_mem_coalesce.cuh  ampere_k03_shared_mem_blocking.cuh  ampere_k04_1d_blocktiling.cuh  ampere_k05_2d_blocktiling.cuh  ampere_k06_vectorized_access.cuh  ampere_k07_bank_conflict_linearized.cuh  ampere_k08_bank_conflict_padded.cuh  ampere_k09_autotuned.cuh  ampere_k10_warp_tiling.cuh  ampere_k11_software_double_buffer.cuh  ampere_k12_cp_async_double_buffer.cuh  ampere_kernels.cuh
src/kernels/hopper/: hopper_k13_tma_fp32.cuh  hopper_k14_tma_double_buffered_fp32.cuh  hopper_k15_tensor_core_tf32.cuh  hopper_k16_tma_tensor_core_tf32.cuh  hopper_kernels.cuh  hopper_tma_common.cuh
